# mini_dev

./: .gitignore  README.md  add_suggested_columns.py  add_suggested_columns_results.json  data  database_columns_schema.json  environment.yml  evaluation_ex.py  extract_db_columns.py  generate_sql_w_tool.py  gpt_request.py  pyproject.toml  query_db_schema.py  question_sql_idx_mapping.json  requirements.txt  sql_query_tool.py
arcwise/: ddl.py  evaluate_retrieval.py  generate_db_metadata.py  litellm_config.yaml  llama_predict.py  modal_litellm_server.py  sql_references.py  typedefs.py  utils.py
arcwise/agent/: execute_sql.py  main.py  prompts.py  run_agent.py  utils.py
arcwise/generate_db_metadata/: generate_db_metadata.py  main.py  utils.py
bird_evaluation/data/: dev_metadata.json  dev_tables_cleaned.json  mini_dev_mysql_gold.sql  mini_dev_postgresql_gold.sql  mini_dev_refs.json  mini_dev_sqlite.json
bird_evaluation/data/schemas/: california_schools.sql  card_games.sql  codebase_community.sql  debit_card_specializing.sql  european_football_2.sql  financial.sql  formula_1.sql  student_club.sql  superhero.sql  thrombosis_prediction.sql  toxicology.sql
bird_evaluation/exp_result/sql_output_kg/: predict_mini_dev_gpt-35-turbo-instruct_mysql.json  predict_mini_dev_gpt-35-turbo_mysql.json  predict_mini_dev_gpt-35-turbo_postgresql.json  predict_mini_dev_gpt-4-32k_sqlite.json  predict_mini_dev_gpt-4_postgresql.json  predict_mini_dev_meta-llama-3-70b-instruct-2_postgresql.json
bird_evaluation/mini_dev_data/: README.md
bird_evaluation/src/: evaluation_ex.py  evaluation_ves.py  prompt.py
eval_result/: predict_mini_dev_gpt-4-turbo__cot_SQLite.txt
evaluation/: SQLite_example_result.txt  evaluation_ex.py  evaluation_f1.py  evaluation_utils.py  evaluation_ves.py  run_evaluation.sh
examples/: MySQL.ipynb  PostgreSQL.ipynb  generate_filter_file_and_micro_dev_question_ids.ipynb
finetuning/: README.md
finetuning/data_processing/: split_data.py  verl_data_process.py
finetuning/inference/: infer_bird_sql.sh  vllm_infer.py
finetuning/training/: sft_bird_sql.sh
live_sql_bench_sqlite/: README.md
live_sql_bench_sqlite/evaluation/: db_utils.py  logger.py  single_instance_eval_sqlite.py  test_utils.py  utils.py  wrapper_evaluation_sqlite.py
live_sql_bench_sqlite/prompt/: baseline.py
live_sql_bench_sqlite/utils/: post_process.py  prompt_generator.py
llm/data/: mini_dev_filter.txt  mini_dev_mysql.json  mini_dev_sqlite_gold.sql
llm/exp_result/TA_output/: predict_mini_dev_gpt-35-turbo_cot_SQLite.json  predict_mini_dev_gpt-4-o_cot_SQLite.json  predict_mini_dev_gpt-4-turbo_cot_SQLite.json  predict_mini_dev_meta-llama-3-70b-instruct2_cot_SQLite.json
llm/exp_result/sql_output_kg/: predict_mini_dev_gpt-35-turbo-instruct_postgresql.json  predict_mini_dev_gpt-35-turbo-instruct_sqlite.json  predict_mini_dev_gpt-35-turbo_sqlite.json  predict_mini_dev_gpt-4-32k_mysql.json  predict_mini_dev_gpt-4-32k_postgresql.json  predict_mini_dev_gpt-4-turbo_mysql.json  predict_mini_dev_gpt-4-turbo_postgresql.json  predict_mini_dev_gpt-4-turbo_sqlite.json  predict_mini_dev_gpt-4_mysql.json  predict_mini_dev_gpt-4_sqlitejson.json  predict_mini_dev_meta-llama-3-70b-instruct-2_mysqljson.json  predict_mini_dev_meta-llama-3-70b-instruct-2_sqlite.json  predict_mini_dev_meta-llama-3-8b-instruct-2_mysql.json  predict_mini_dev_meta-llama-3-8b-instruct-2_postgresql.json  predict_mini_dev_meta-llama-3-8b-instruct-2_sqlite.json  predict_mini_dev_mistralai-mixtral-8x7b-instru-4_mysql.json  predict_mini_dev_mistralai-mixtral-8x7b-instru-4_postgresql.json  predict_mini_dev_mistralai-mixtral-8x7b-instru-4_sqlite.json  predict_mini_dev_phi-3-medium-128k-instruct-1_mysql.json  predict_mini_dev_phi-3-medium-128k-instruct-1_postgresql.json  predict_mini_dev_phi-3-medium-128k-instruct-1_sqlite.json
llm/mini_dev_data/: README.md
llm/run/: run_evaluation.sh  run_gpt.sh
llm/src/: evaluation_ex.py  evaluation_f1.py  evaluation_utils.py  evaluation_ves.py  gpt_request.py  llm_client.py  table_schema.py
scripts/: init_dataset.sh  run_evaluation.sh  run_gpt.sh
sql_result/: predict_mini_dev_gpt-4-turbo__cot_SQLite.json
