[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.9.0",
    "certifi>=2025.4.26",
    "distro>=1.9.0",
    "func-timeout>=4.3.5",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "idna>=3.10",
    "jiter>=0.10.0",
    "numpy>=2.3.0",
    "openai>=1.84.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.5",
    "pydantic-core>=2.33.2",
    "pymysql>=1.1.1",
    "sniffio>=1.3.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "typing-extensions>=4.14.0",
    "typing-inspection>=0.4.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
